# mcp-creator

./: .gitignore  README.md  bootstrap.sh  llms-full.txt  pyproject.toml
.github/workflows/: ci.yml
scripts/: dev.sh
src/mcp_creator/: __init__.py  api.py  mcp_builder_server.py  rag_index.py
tests/: test_chunker.py
