[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-creator"
version = "0.1.0"
description = "RAG-backed MCP builder (API + optional MCP stdio server)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "human-ai-colab" }]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "requests>=2.32.0"
]
mcp = [
    "mcp[cli]>=1.2.0"
]

[project.scripts]
mcp-creator-api = "mcp_creator.api:main"
mcp-builder-server = "mcp_creator.mcp_builder_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","I","UP","B"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
